[package]
name = "embre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embre-crypt = { path = "crypt", optional = true }
embre-macro = { path = "macro" }
widestring = "1.0.2"

[features]
default = []
aes = ["embre-macro/aes", "embre-crypt/aes"]
openssl = ["embre-crypt/openssl", "embre-macro/openssl"]
openssl-vendored = ["embre-crypt/openssl-vendored", "embre-macro/openssl-vendored"]
DefaultPEResource = []

[workspace]
members = [
    "_test",
    "build",
    "core",
    "crypt",
    "macro",
]
