[package]
name = "embre"
version = "0.1.0"
edition = "2021"

[dependencies]
embre-crypt = { path = "crypt", optional = true }
embre-macro = { path = "macro" }
widestring = "1.0.2"

[features]
default = []
aes = ["embre-macro/aes", "embre-crypt/aes"]
openssl = ["embre-crypt/openssl", "embre-macro/openssl"]
openssl-vendored = ["openssl", "embre-crypt/openssl-vendored", "embre-macro/openssl-vendored"]
default-pe-resource = []

[workspace]
members = [
    "_test",
    "_utils",
    "build",
    "core",
    "crypt",
    "macro",
]

default-members = [
    "_utils",
    "build",
    "core",
    "crypt",
    "macro",
]


