[package]
name = "embre-test"
version = "0.1.0"
edition = "2021"

[dependencies]
embre = { path = "..", features = ["default-pe-resource", "openssl-vendored", "aes"] }
embre-build = { path = "../build", features = ["openssl-vendored", "aes"] }
embre-crypt = { path = "../crypt", features = ["openssl-vendored"] }

[build-dependencies]
embre-build = { path = "../build", features = ["openssl-vendored", "aes"] }
