[package]
name = "embre-core"
version = "0.1.0"
edition = "2021"

[dependencies]
embre-build = { path = "../build" }
embre-utils = { path = "../_utils" }
embre-crypt = { path = "../crypt", optional = true }
syn = { version = "2.0.44", features = ["full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0.69"

[features]
default = []
aes = ["embre-crypt/aes", "embre-crypt/openssl"]
openssl = ["embre-crypt/openssl"]
openssl-vendored = ["embre-crypt/openssl-vendored"]
