[package]
name = "embre-crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.59",  optional = true }

[features]
default = []
aes = []
openssl-vendored = ["openssl", "openssl/vendored"]
