[package]
name = "embre-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
embre-core = { path = "../core" }

[features]
default = []
aes = ["embre-core/aes"]
openssl = ["embre-core/openssl"]
openssl-vendored = ["embre-core/openssl", "embre-core/openssl-vendored"]